[tool.poetry]
name = "api-project-kit"
version = "0.1.0"
description = ""
authors = ["Gustavo Correa <self.gustavocorrea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
aiohttp = "^3.7.4"
SQLAlchemy = "1.4.22"
httptools = { version = "^0.3.0", optional = true }
uvloop = { version = "^0.16.0", optional = true }
gunicorn = { version = "^20.1.0", optional = true }
colorlog = "^5.0.1"
pydantic = { version = "^1.8.2", extras = ["email"] }
aiomysql = { version = "^0.0.21", optional = true }
asyncpg = { version = "^0.24.0", optional = true }
psycopg2 = { version = "^2.9.1", optional = true }
aiosqlite = { version = "^0.17.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sqlalchemy2-stubs = "^0.0.2-alpha.8"
black = "^21.7b0"
pylint = "^2.9.6"

[tool.poetry.extras]
mysql = ["aiomysql"]
postgres = ["asyncpg", "psycopg2"]
sqlite = ["aiosqlite"]
deploy = ["httptools", "uvloop", "gunicorn"]

[tool.poetry.scripts]
black = "api_project_kit.scripts:black"
isort = "api_project_kit.scripts:isort"
commit = "api_project_kit.scripts:commit"
fix = "api_project_kit.scripts:fix"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
